@@ -41,9 +41,6 @@ SPR_RW(SPRG1)
 extern rtems_configuration_table Configuration;
 extern unsigned long intrStackPtr;
 rtems_configuration_table  BSP_Configuration;
-
-rtems_cpu_table Cpu_table;
-
 char *rtems_progname;
 
 /*
@@ -88,10 +85,6 @@ void _BSP_Fatal_error(unsigned int v)
  *
  *  Must not use libc (to do io) from here, since drivers are not yet
  *  initialized.
- *
- *  Installed in the rtems_cpu_table defined in
- *  rtems/c/src/exec/score/cpu/m68k/cpu.h in main() below. Called from
- *  rtems_initialize_executive() defined in rtems/c/src/exec/sapi/src/init.c
  *
  *  Input parameters: NONE
  *
@@ -205,10 +198,8 @@ void bsp_start(void)
   BSP_Configuration.work_space_start = (void *)&_WorkspaceBase;
 
   /*
-   *  initialize the CPU table for this BSP
+   *  initialize the device driver parameters
    */
-  if( Cpu_table.interrupt_stack_size < 4 * 1024 )
-      Cpu_table.interrupt_stack_size = 4 * 1024;
 
 #if    ( defined(mbx860_001b) || \
          defined(mbx860_002b) || \
