@@ -32,9 +32,6 @@
  */
 extern rtems_configuration_table Configuration;
 rtems_configuration_table  BSP_Configuration;
-
-rtems_cpu_table Cpu_table;
-
 char *rtems_progname;
 
 /*
@@ -66,10 +63,6 @@ void bsp_libc_init( void *, uint32_t, int );
  *
  *  Must not use libc (to do io) from here, since drivers are not yet
  *  initialized.
- *
- *  Installed in the rtems_cpu_table defined in 
- *  rtems/c/src/exec/score/cpu/m68k/cpu.h in main() below. Called from
- *  rtems_initialize_executive() defined in rtems/c/src/exec/sapi/src/init.c
  *
  *  Input parameters: NONE
  *
@@ -163,12 +156,8 @@ void bsp_start(void)
   BSP_Configuration.work_space_start = (void *)&_WorkspaceBase;
 
   /*
-   *  initialize the CPU table for this BSP
+   *  initialize the device driver parameters
    */
-
-  if( Cpu_table.interrupt_stack_size < 4 * 1024 )
-      Cpu_table.interrupt_stack_size = 4 * 1024;
-
   bsp_clicks_per_usec = 1;  /* for 4MHz extclk */
   bsp_serial_per_sec = 10000000;
   bsp_serial_external_clock = 1;
